js/timeglider/Timeglider.css
/* ... */
  
  
.timeglider-truck {
   position:relative;
}
 
  
.timeglider-ticks {
	top:0px;
	position:relative;
	height:900px;
 }
  
.timeglider-tick {
  /* defaults on arrival in ticks */
	position:absolute;
	height:34px;
	font-size:11px;
	background-color:#BBB;
	/* A line as bg doesn't alter the width of the div!*/
	background-image:url("img/dotted.png");
	background-repeat:no-repeat;
	border-top:1px solid #FFF;
	overflow:hidden;
}

.timeglider-tick-label {
  text-shadow: 0px 1px 0px rgba(255,255,255,0.7);
 	color:#333;
 	position:absolute;
  top:4px;
  left:4px;
  font-weight:bold;
 }
 
 
.timeglider-tick-sub-label {
 
 color:#FAFAFA;
 /* OLD float:left; display:inline; */
 position:absolute;
 height:12px;
 top:2px;
 /* This padding-left needs to be exactly the same as
    the value in TG_TimelineView addTick() for setting hour labels
 */
 padding-left:3px;
 border-left:1px solid #777;
 font-size:9px;
 margin:0;
 
}
  
.timeglider-handle {
		position:absolute;
		top:0px;
		height:1000px;
		width:100%;
		
		filter:alpha(opacity=1);
		-moz-opacity:0.01;
		-khtml-opacity: 0.01;
		opacity: 0.01;
		
		cursor:move;
		
}
	


.timeglider-display-block {
	display:block;
}
.timeglider-display-none {
	display:none;
}

 
/* JUST A SHADOW TO ADD TO CLASSES */
.tg-modal, .timeglider-event-hover-info, .timeglider-menu-modal {
	-moz-box-shadow: 3px 3px 4px #333;
	-webkit-box-shadow: 3px 3px 4px #333;
	box-shadow: 3px 3px 4px #333;
	/* For IE 8 */
	-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#333333')";
	/* For IE 5.5 - 7 */
	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#333333');
	position:absolute;
}

.close-button-remove, .close-button-filter, .close-button-toggleMenu {
	cursor:pointer;
	width:30px;
	height:30px;
	background-image:url(buttons/close.png);
	position:absolute;
	top:-16px;
	right:-16px;
}

.timeglider-close-button-small {
  float:right;
	cursor:pointer;

	width:15px;
	height:15px;
	background-image:url(buttons/close_small.png);
	margin-top:-8px;
	margin-right:-7px;
}


#timeglider-measure-span {
	font-size:12px;
	width:auto;
	position:absolute;
	top:-50px;
	left:0px;
}







/* TEMP */
.timeglider-timeline-event {
	position:absolute;
	/* background-color:white; */
	padding:0px;
	font-size:.9em;
	cursor:pointer;
}

.timeglider-timeline-event:hover .timeglider-event-image-inline img {
	opacity:.5;
}

.timeglider-event-hover-info {
  position:absolute;
  left:-1000px;
  background-color:#fff;
  padding:3px 6px 3px 6px;
  min-width:50px;
  font-size:.7em;
  z-index:100;
  -webkit-border-top-right-radius: 6px;
  -webkit-border-top-left-radius: 6px;
  -webkit-border-bottom-right-radius: 6px;
  -moz-border-radius-topright: 6px;
  -moz-border-radius-topleft: 6px;
  -moz-border-radius-bottomright: 6px;
  border-top-right-radius: 6px;
  border-top-left-radius: 6px;
  border-bottom-right-radius:6px;
}

.tg-event-hovered .timeglider-event-title {
  color:#CC0000;
}

.timeglider-dateline-startdate {
	color:green;
}
.timeglider-dateline-enddate {
	color:#CC0000;
}


.timeglider-event-image-bar {
  /* placed in a div in the timeline bar */
  width:22px;
  height:22px;
  overflow:hidden;
  position:absolute;
  border:1px solid #333;
  top:-28px;
  z-index:1;
}
.timeglider-event-image-bar img {
  height:24px;
  width:auto;
}


.timeglider-event-image-above {
  /* placed in a div floating just below the "ceiling" */
   position:absolute;
   /* top:-28px; */
   z-index:1;
   display:none;
}
.timeglider-event-image-above img {
  height:48px;
  width:auto;
  border:1px solid #000;
}


.timeglider-event-image-inline {
  /* div for default fullsize image with event */
  position:absolute;
  
}

.timeglider-event-image-inline img {
  position:absolute;
}

.tg-timeline-env-buttons {
  color:#FFF;
  cursor:pointer;
	font-size:10px;
	margin-top:4px;
	background-color:#555;
	font-weight:normal;
	padding:2px 0 2px 6px;
	
	-webkit-border-bottom-right-radius: 4px;
  -webkit-border-bottom-left-radius: 4px;
  -moz-border-radius-bottomright: 4px;
  -moz-border-radius-bottomleft: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  
  width:112px;
  text-shadow:none;
  
}


.tg-timeline-env-buttons .expand-collapse, .tg-timeline-env-buttons .timeline-info {
  margin-right:12px;
}

.timeglider-event-icon {
	margin-right:5px;
	width:auto;
	position:absolute;
}

.timeglider-footer-button {
  	float:right;
  	width:26px;
  	height:26px;
  	cursor:pointer;
  	margin-right:12px;
}

.timeglider-filter-bt {
	margin-right:6px;
	background-image:url(buttons/filter.png);
}
.timeglider-list-bt {
	background-image:url(buttons/list.png);
}
.timeglider-settings-bt {
 	background-image:url(buttons/tools.png);
}

/* MENU MODALS */


.timeglider-menu-modal, .timeglider-settings-modal {
	position:absolute;
	background-color:#111;
	border-radius:6px;
	-moz-border-radius:6px;
	-webkit-border-radius:6px;
	z-index:20;
	padding:2px;
	
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#555555', endColorstr='#000000'); /* for IE */
	background: -webkit-gradient(linear, left top, left bottom, from(#555), to(#000)); /* for webkit browsers */
	background: -moz-linear-gradient(top,  #555,  #000); /* for firefox 3.6+ */
	background-repeat:no-repeat;
}

.timeglider-menu-modal  h3 {
	float:left;
	width:100px;
	font-size:14px;
	margin:6px 0px 3px 4px;
	font-weight:bold;
	color:#F0F0F0;
	clear:left;
	letter-spacing:.5px;
	text-shadow:1px 1px black;
}

.timeglider-menu-modal .close-button {
	float:right;
	cursor:pointer;
	margin-right:-16px;
	margin-top:-16px;
	width:30px;
	height:30px;
	background-image:url(buttons/close.png);
}
	

.timeglider-menu-modal-point-right {
    width:20px;
    height:20px;
    background-image:url("img/menu-pointer-right.png");
    background-repeat:no-repeat;
    position:absolute;
    bottom:-20px;
    right:6px;
}

.timeglider-menu-modal  p {
	color:#333;
	font-size:12px;
}
/* ... */

